Update 't0fs5c0fx-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:4e243f201c87080096fabf2156446181fa4d176d@sha256:deb719b8c2f275178d659bc3920ee19b2c02e319f35c758ab3a0e12392a0f450

--- a/components/t0fs5c0fx-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/t0fs5c0fx-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: t0fs5c0fx-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:4e243f201c87080096fabf2156446181fa4d176d@sha256:deb719b8c2f275178d659bc3920ee19b2c02e319f35c758ab3a0e12392a0f450
+          name: container-image
